RESOLVED FIXED132629
Do the bmalloc.
https://bugs.webkit.org/show_bug.cgi?id=132629
Summary Do the bmalloc.
Andreas Kling
Reported 2014-05-06 15:19:26 PDT
-
Attachments
Snack for EWS (431 bytes, patch)
2014-05-06 15:21 PDT, Andreas Kling
no flags
Snack Fighter II: World Warrior (1.92 KB, patch)
2014-05-06 15:55 PDT, Andreas Kling
no flags
Snackcraft III: The Frozen Throne (2.63 KB, patch)
2014-05-06 17:26 PDT, Andreas Kling
no flags
Patch (3.69 KB, patch)
2014-05-10 13:12 PDT, Geoffrey Garen
no flags
Patch (1.07 KB, patch)
2014-08-14 14:44 PDT, Geoffrey Garen
no flags
Patch (1002 bytes, patch)
2014-08-18 11:37 PDT, Geoffrey Garen
no flags
Patch (1003 bytes, patch)
2014-08-18 11:44 PDT, Geoffrey Garen
no flags
Patch (1.03 KB, patch)
2014-08-19 14:00 PDT, Geoffrey Garen
no flags
Patch (3.49 KB, patch)
2014-08-20 10:46 PDT, Geoffrey Garen
no flags
Patch (1.70 KB, patch)
2014-08-20 13:19 PDT, Geoffrey Garen
no flags
Patch (4.74 KB, patch)
2014-08-20 17:55 PDT, Geoffrey Garen
no flags
Patch (991 bytes, patch)
2014-09-03 14:26 PDT, Geoffrey Garen
no flags
Patch (990 bytes, patch)
2014-09-04 13:28 PDT, Geoffrey Garen
no flags
Patch (991 bytes, patch)
2014-09-10 13:53 PDT, Geoffrey Garen
no flags
Patch (1000 bytes, patch)
2014-09-10 15:45 PDT, Geoffrey Garen
no flags
Patch (1000 bytes, patch)
2014-09-11 14:08 PDT, Geoffrey Garen
no flags
Patch (977 bytes, patch)
2014-09-24 11:50 PDT, Geoffrey Garen
no flags
Andreas Kling
Comment 1 2014-05-06 15:21:13 PDT
Created attachment 230938 [details] Snack for EWS
Benjamin Poulain
Comment 2 2014-05-06 15:37:20 PDT
Wooot! :)
Andreas Kling
Comment 3 2014-05-06 15:55:42 PDT
Created attachment 230945 [details] Snack Fighter II: World Warrior
Andreas Kling
Comment 4 2014-05-06 17:26:18 PDT
Created attachment 230958 [details] Snackcraft III: The Frozen Throne
Geoffrey Garen
Comment 5 2014-05-10 13:12:15 PDT
Geoffrey Garen
Comment 6 2014-05-10 13:13:57 PDT
Giving this another try, since I think the bots must be crazy.
Csaba Osztrogonác
Comment 7 2014-05-19 08:45:21 PDT
(In reply to comment #6) > Giving this another try, since I think the bots must be crazy. I this the bots aren't crazy, but this patch made SVG tests crash: https://webkit-queues.appspot.com/patch/231231
Csaba Osztrogonác
Comment 8 2014-05-19 08:46:43 PDT
Comment on attachment 231231 [details] Patch r- not to force EWS bots run in an infinite loop.
Geoffrey Garen
Comment 9 2014-08-14 14:44:18 PDT
Andreas Kling
Comment 10 2014-08-14 14:58:26 PDT
Comment on attachment 236622 [details] Patch If it fits, etc.
Geoffrey Garen
Comment 11 2014-08-14 19:26:05 PDT
Tests are still crashing on EWS.
Pratik Solanki
Comment 12 2014-08-14 19:31:02 PDT
Comment on attachment 236622 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=236622&action=review > Source/WTF/wtf/FastMalloc.cpp:104 > +#if (PLATFORM(MAC) || PLATFORM(IOS)) && (CPU(X86_64) || CPU(ARM64)) PLATFORM(COCOA) !
Geoffrey Garen
Comment 13 2014-08-18 11:37:42 PDT
Geoffrey Garen
Comment 14 2014-08-18 11:38:07 PDT
Not really for review. Trying to reproduce EWS failure.
Geoffrey Garen
Comment 15 2014-08-18 11:44:08 PDT
Geoffrey Garen
Comment 16 2014-08-19 14:00:45 PDT
Geoffrey Garen
Comment 17 2014-08-20 10:46:05 PDT
Geoffrey Garen
Comment 18 2014-08-20 13:19:14 PDT
Geoffrey Garen
Comment 19 2014-08-20 17:55:28 PDT
Geoffrey Garen
Comment 20 2014-09-03 14:26:13 PDT
Geoffrey Garen
Comment 21 2014-09-03 14:27:27 PDT
Perhaps, with the fix for bug 136469, this will pass EWS now.
Geoffrey Garen
Comment 22 2014-09-04 13:28:04 PDT
Michael Saboff
Comment 23 2014-09-04 13:32:45 PDT
Comment on attachment 237644 [details] Patch r=me
Geoffrey Garen
Comment 24 2014-09-05 11:07:35 PDT
Geoffrey Garen
Comment 25 2014-09-10 13:53:50 PDT
Reopening to attach new patch.
Geoffrey Garen
Comment 26 2014-09-10 13:53:53 PDT
Geoffrey Garen
Comment 27 2014-09-10 15:45:57 PDT
Geoffrey Garen
Comment 28 2014-09-11 14:08:54 PDT
Geoffrey Garen
Comment 29 2014-09-11 14:45:56 PDT
Geoffrey Garen
Comment 30 2014-09-24 11:49:13 PDT
Geoffrey Garen
Comment 31 2014-09-24 11:50:10 PDT
Geoffrey Garen
Comment 32 2014-09-24 15:07:49 PDT
Geoffrey Garen
Comment 33 2014-10-24 10:00:46 PDT
Results from perf bots: OSMemoryTesting/Snap2FinishedLoadingPost:Allocations:Total: 0% (no regression) PLT: 5% DOM/GetElement: 42.84% jslib-attr-jquery: 18.1% dromaeo-object-string: 13.3% dom-modify: 12.3% cssquery-jquery: 5% cssquery-prototype: 4.8% cssquery-dojo: 3.8% dromaeo-object-array: 3.4% jslib-style-jquery: 3.2% DYEB: 2.4% Parser/HTML5-8266-FullRender: 4% Parser/HTML5-8266-ParseOnly: 5.6% css-parser-yui: 10.2% Parser/html-parser: 6.5% Parser/textarea-parsing: 11.22% Layout/floats_100_100: 7.22% Layout/floats_100_100_nested: 9.32% Layout/floats_20_100: 11.42% Layout/floats_20_100_nested: 13.86% Layout/layers_overlap_2d: 6.69% Layout/auto-grid-lots-of-data: 4.3% Layout/chapter-reflow-once-random: 3.8% Layout/fixed-grid-lots-of-data: 5.92% Interactive/window-resize: 2% Animation/balls:FrameRate: 4% DOM/CloneNodes: 13.93% DOM/DOMDivWalk: 10.7% DOM/GetElement: 42.84% DOM/ModifyAttribute: 8.7%
Andreas Kling
Comment 34 2014-10-24 11:00:53 PDT
obamanotbad.jpg
Geoffrey Garen
Comment 35 2014-10-24 11:25:32 PDT
MallocBench result vs TCMalloc: geometric mean speedup: 2.11x faster biggest speedup (list_allocate): 4.09x faster
Note You need to log in before you can comment on or make changes to this bug.