Do the bmalloc. https://bugs.webkit.org/show_bug.cgi?id=132629

Reviewed by Michael Saboff.

64-bit only for now, just to try it out.

* wtf/FastMalloc.cpp:


Canonical link: https://commits.webkit.org/154581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173540 268f45cc-cd09-0410-ab3c-d52691b4dbfc